; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_NnBuildDnsQueryPacket.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Virtual.c_NnBuildDnsQueryPacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @NnBuildDnsQueryPacket(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_4__, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = call i32* (...) @NewBuf()
  store i32* %7, i32** %5, align 8
  %8 = call i32 @Zero(%struct.TYPE_4__* %6, i32 24)
  %9 = load i32, i32* %4, align 4
  %10 = call i8* @Endian16(i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 3
  store i8* %10, i8** %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i32 1, i32* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  store i32 0, i32* %13, align 4
  %14 = call i8* @Endian16(i32 1)
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 2
  store i8* %14, i8** %15, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @WriteBuf(i32* %16, %struct.TYPE_4__* %6, i32 24)
  %18 = load i32*, i32** %5, align 8
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @BuildDnsQueryPacket(i32* %18, i8* %19, i32 0)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @SeekBufToBegin(i32* %21)
  %23 = load i32*, i32** %5, align 8
  ret i32* %23
}

declare dso_local i32* @NewBuf(...) #1

declare dso_local i32 @Zero(%struct.TYPE_4__*, i32) #1

declare dso_local i8* @Endian16(i32) #1

declare dso_local i32 @WriteBuf(i32*, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @BuildDnsQueryPacket(i32*, i8*, i32) #1

declare dso_local i32 @SeekBufToBegin(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
